--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,28 @@
+databases:
+  - name: appdb
+    databaseName: appdb
+    plan: free
+
 services:
   - type: web
-    name: veterans-benefits-assistant
+    name: veterans-benefits-ai
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.9
+      - key: DATABASE_URL
+        fromDatabase:
+          name: appdb
+          property: connectionString
+      - key: SECRET_KEY
+        generateValue: true
+      - key: ADMIN_TOKEN
+        generateValue: true
+      # Keep existing environment variables
       - key: PINECONE_API_KEY
-        sync: false
-      - key: PINECONE_ASSISTANT_NAME
-        sync: false
-      - key: FIRECRAWL_API_KEY
-        sync: false
+        sync: false  # Set manually in dashboard
+      - key: OPENAI_API_KEY
+        sync: false  # Set manually in dashboard
+      - key: MCP_API_KEY
+        sync: false  # Set manually in dashboard
