fix(render): correct blueprint runtime key; generate ADMIN_TOKEN/SECRET_KEY; add TEST_FLAG and verification docs
- Switched service key from \env: python\ to \untime: python\ so Blueprint envs actually apply
- Ensure ADMIN_TOKEN and SECRET_KEY use generateValue:true
- Add TEST_FLAG=on for runtime sanity check
- Add scripts/verify_admin_token_len.sh for safe token length check
- Document why empty ADMIN_TOKEN happens and exact Render steps to repair

--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ databases:
 services:
   - type: web
     name: veterans-benefits-ai
-    env: python
+    runtime: python
     plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
@@ -19,6 +19,8 @@ services:
         generateValue: true
       - key: ADMIN_TOKEN
         generateValue: true
+      - key: TEST_FLAG
+        value: on
       - key: PINECONE_API_KEY
         sync: false
       - key: OPENAI_API_KEY
