--- a/render.yaml
+++ b/render.yaml
@@ -16,6 +16,8 @@ services:
           property: connectionString
       - key: SECRET_KEY
         generateValue: true
+      - key: PINECONE_INDEX_NAME
+        value: veterans-benefits-kb
       - key: ADMIN_TOKEN
         generateValue: true
       - key: TEST_FLAG
