fix: update render.yaml service name to test2

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ databases:
 
 services:
   - type: web
-    name: veterans-benefits-ai
+    name: test2
     runtime: python
     plan: free
     buildCommand: pip install -r requirements.txt
