--- a/veteran-ai-spark/env.example
+++ b/veteran-ai-spark/env.example
@@ -1,40 +1,36 @@
-# Production Environment Configuration for Render.com
-# Copy this to .env and fill in your actual values
-
 # OpenAI Configuration
-OPENAI_API_KEY=sk-your-openai-api-key-here
-
-# Pinecone Configuration  
-PINECONE_API_KEY=your-pinecone-api-key-here
-PINECONE_ENV=your-pinecone-environment
-PINECONE_INDEX=your-index-name
-
-# Model Configuration
+OPENAI_API_KEY=sk-...
 MODEL_BIG=gpt-4o
 MODEL_SMALL=gpt-4o-mini
+EMBED_MODEL=text-embedding-3-small
 
-# CRITICAL: Choose embedding model that matches your Pinecone index dimensions
-# For 1024D Pinecone index: use text-embedding-3-large with dimensions=1024
-# For 1536D Pinecone index: use text-embedding-3-small or text-embedding-ada-002
-EMBEDDING_MODEL=text-embedding-3-large
+# Pinecone Configuration
+PINECONE_API_KEY=...
+PINECONE_INDEX=veteran-rag
+PINECONE_NAMESPACE=production
 
-# Cache Configuration (Render.com persistent disk paths)
-CACHE_DB_PATH=/opt/render/project/data/cache.sqlite
-FAISS_PATH=/opt/render/project/data/query_cache.faiss
+# Flask Configuration
+FLASK_ENV=production
+SECRET_KEY=your-secret-key-change-in-production
+DEBUG=false
 
-# Similarity Thresholds
-SIM_THRESHOLD=0.92
-DOC_OVERLAP_MIN=0.6
-MAX_SOURCES=6
-RETRIEVE_K=50
-RERANK_K=8
+# RAG Configuration
+RETRIEVAL_TOP_K=50
+RERANK_TOP_K=8
 COMPRESS_BUDGET_TOKENS=2200
+MAX_QUOTES=6
+QUOTE_MAX_TOKENS=120
 
-# Cache Embedding Model (for semantic similarity)
-CACHE_EMBEDDING_MODEL=all-MiniLM-L6-v2
+# Cache Configuration
+CACHE_DB_PATH=cache.db
+SEMANTIC_THRESHOLD=0.92
+JACCARD_THRESHOLD=0.6
+DOC_VERSION_SALT=v1.0
 
-# Admin Configuration (optional)
-ADMIN_TOKEN=your-admin-token-here
+# Evaluation
+EVAL_QAS_PATH=app/eval/qas.csv
 
-# Document Version
-DOC_VERSION_SALT=v1.0.0
+# Deployment
+PORT=5000
+WORKERS=2
+THREADS=4
