Fix Render deployment with proper Node.js configuration
CRITICAL DEPLOYMENT FIX:
- Update render.yaml with correct Node.js web service configuration
- Set env to 'node' with region 'oregon'
- Use 'npm ci && npm run build' for faster, reliable builds
- Add 'npm start' command to serve built React app
- Add 'serve' package dependency for production serving
- Set NODE_VERSION to 18.17.0 with proper quotes

This should force Render to deploy as Node.js instead of Python/Flask.
The whitepaper button and /whitepaper route will be available after deployment.

--- a/veteran-ai-spark/render.yaml
+++ b/veteran-ai-spark/render.yaml
@@ -1,10 +1,11 @@
 services:
   - type: web
-    name: veteran-ai-spark-frontend
+    name: my-node-app
     env: node
     plan: starter
-    buildCommand: npm install && npm run build
-    startCommand: npx serve -s dist -l 10000
+    region: oregon
+    buildCommand: npm ci && npm run build
+    startCommand: npm start
     envVars:
       - key: NODE_VERSION
-        value: 18.17.0
+        value: "18.17.0"
