--- a/veteran-ai-spark/package.json
+++ b/veteran-ai-spark/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npx serve -s dist -l 10000"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -63,7 +64,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
