--- a/veteran-ai-spark/render.yaml
+++ b/veteran-ai-spark/render.yaml
@@ -4,8 +4,9 @@ services:
     env: node
     plan: starter
     region: oregon
+    rootDir: .
     buildCommand: npm ci && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_VERSION
-        value: "18.17.0"
+        value: "20.18.0"
