--- a/veteran-ai-spark/render.yaml
+++ b/veteran-ai-spark/render.yaml
@@ -1,4 +1,16 @@
 services:
+  - type: static_site
+    name: VBai-subdir
+    buildCommand: npm ci --prefix veteran-ai-spark && npm run build --prefix veteran-ai-spark
+    publishPath: veteran-ai-spark/dist
+    envVars:
+      - key: NODE_VERSION
+        value: 20.18.0
+    routes:
+      - type: rewrite
+        source: "/*"
+        destination: "/index.html"
+services:
   - type: web
     name: my-node-app
     env: node
