--- a/veteran-ai-spark/render-react.yaml
+++ b/veteran-ai-spark/render-react.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: starter
     buildCommand: npm install && npm run build
-    startCommand: npx serve -s dist -l 10000
+    startCommand: npx serve -s dist -l $PORT
     envVars:
       - key: NODE_VERSION
         value: 18.17.0
