--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 Flask>=3.0.0
-pinecone>=3.0.0
 python-dotenv>=1.0.0
 gunicorn>=21.2.0
 requests>=2.31.0
@@ -8,3 +7,4 @@ openai>=1.0.0
 sqlalchemy>=2.0.0
 psycopg[binary]>=3.1.0
 psycopg2-binary>=2.9.0
+numpy>=1.24.0
